--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
 SKIP_PREFLIGHT_CHECK=true
 
 PUBLIC_URL="https://piyushchauhan3.github.io/expene_tracker_/"
+
+REACT_API_KEY="AIzaSyDXpCkGOiOueIC3jaeRXFQy0ySOSO20rfg",
+REACT_authDomain="expense-tracker-df20d.firebaseapp.com",
+REACT_projectId="expense-tracker-df20d",
+REACT_storageBucket="expense-tracker-df20d.firebasestorage.app",
+REACT_messagingSenderId="696430129697",
+REACT_appId="1:696430129697:web:c47c982c2a7b34caa6e960"
