--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "expense_tracker",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
-  "homepage": "https://piyushchauhan3.github.io/expene_tracker_/",
+  "homepage": "https://piyushchauhan3.github.io/expense_tracker_/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -23,7 +23,7 @@
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.3",
     "@react-pdf/renderer": "^4.2.2",
-    "@react-pdf/stylesheet": "^6.0.0",
+    "@react-pdf/stylesheet": "^5.0.0",
     "@shadcn/ui": "^0.0.4",
     "ajv": "^8.17.1",
     "aos": "^2.3.4",
@@ -37,9 +37,11 @@
     "express": "^4.21.1",
     "file-saver": "^2.0.5",
     "firebase": "^11.2.0",
+    "font-awesome": "^4.7.0",
     "framer-motion": "^11.12.0",
     "install": "^0.13.0",
-    "jspdf": "^3.0.0",
+    "jquery": "^3.7.1",
+    "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.4",
     "mdb-react-ui-kit": "^9.0.0",
     "nodemailer": "^6.9.16",
